<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.universaal.nativeandroid.lightclient.MainActivity">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_rectangle_green_board"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile_icon"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintLeft_toLeftOf="@+id/guideline12"
            app:layout_constraintRight_toLeftOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image_view"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintLeft_toLeftOf="@+id/guideline12"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image_view"
            app:srcCompat="@drawable/add_icon" />

        <EditText
            android:id="@+id/personal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/personal_name"
            android:textColor="@color/white"
            android:background="@color/main_green_color"
            app:layout_constraintLeft_toLeftOf="@+id/profile_image_view"
            app:layout_constraintRight_toRightOf="@+id/profile_image_view"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
            android:layout_marginTop="21dp" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.42"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="25dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.58"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="25dp" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update"
            tools:layout_editor_absoluteY="29dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline13"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.754" />

        <RelativeLayout
            android:id="@+id/fragment_holder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/personal_name">

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:visibility="visible"
        app:fab_addButtonColorNormal="@android:color/holo_blue_bright"
        app:fab_addButtonColorPressed="@color/floating_button_color"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_addButtonStrokeVisible="true"
        app:fab_labelStyle="@style/menu_labels_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/choose_disability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/main_green_color"
            app:fab_icon="@drawable/my_card_icon"
            app:fab_size="mini"
            app:fab_title="@string/choose_disability" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/main_green_color"
            app:fab_icon="@drawable/settings_icon"
            app:fab_size="mini"
            app:fab_title="@string/settings" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/simulator_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/main_green_color"
            app:fab_icon="@drawable/ic_child_care_black_24dp"
            app:fab_size="mini"
            app:fab_title="@string/simulator" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>


